--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <maven.compile.targer>11</maven.compile.targer>
         <maven.compile.source>11</maven.compile.source>
         <java.version>11</java.version>
+        <spring.version>5.2.8.RELEASE</spring.version>
     </properties>
 
 
@@ -36,10 +37,17 @@
         <version>1.18.12</version>
         <scope>provided</scope>
     </dependency>
+
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>5.2.8.RELEASE</version>
+        <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
     </dependency>
 
     <dependency>
@@ -47,7 +55,22 @@
         <artifactId>postgresql</artifactId>
         <version>42.2.18</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.4.8.Final</version>
+    </dependency>
 
+    <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>4.0.3</version>
+    </dependency>
 
 </dependencies>
 
