--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 journeyService=org.hillel.service.JDBCJourneyServiceImpl
-system.message=Test message from properties
+#system.message=Test message from properties
