--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,42 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${maven-compiler-plugin}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${maven.compile.source}</source>
+                    <target>${maven.compile.target}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-jpamodelgen</artifactId>
+                        <version>${org.hibernate-jpamodelgen}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${org.projectlombok}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArguments>
+                        <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor,lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>
+                    </compilerArguments>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <maven.compile.targer>11</maven.compile.targer>
+        <maven.compile.target>11</maven.compile.target>
         <maven.compile.source>11</maven.compile.source>
+        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
         <java.version>11</java.version>
         <spring.version>5.2.8.RELEASE</spring.version>
+        <org.projectlombok>1.18.12</org.projectlombok>
+        <javax.annotation-api>1.3.2</javax.annotation-api>
+        <org.postgresql>42.2.18</org.postgresql>
+        <org.hibernate-core>5.4.8.Final</org.hibernate-core>
+        <com.zaxxer.HikariCP>4.0.3</com.zaxxer.HikariCP>
+        <org.hibernate-jpamodelgen>5.4.30.Final</org.hibernate-jpamodelgen>
     </properties>
 
 
@@ -34,7 +56,7 @@
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>1.18.12</version>
+        <version>${org.projectlombok}</version>
         <scope>provided</scope>
     </dependency>
 
@@ -47,29 +69,31 @@
     <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
-        <version>1.3.2</version>
+        <version>${javax.annotation-api}</version>
     </dependency>
 
     <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>42.2.18</version>
+        <version>${org.postgresql}</version>
     </dependency>
+
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-orm</artifactId>
         <version>${spring.version}</version>
     </dependency>
+
     <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>5.4.8.Final</version>
+        <version>${org.hibernate-core}</version>
     </dependency>
 
     <dependency>
         <groupId>com.zaxxer</groupId>
         <artifactId>HikariCP</artifactId>
-        <version>4.0.3</version>
+        <version>${com.zaxxer.HikariCP}</version>
     </dependency>
 
 </dependencies>
