--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
         <java.version>11</java.version>
         <spring.version>5.2.8.RELEASE</spring.version>
+        <org.springframework.data-jpa>2.4.1</org.springframework.data-jpa>
         <org.projectlombok>1.18.12</org.projectlombok>
         <javax.annotation-api>1.3.2</javax.annotation-api>
         <org.postgresql>42.2.18</org.postgresql>
@@ -83,6 +84,13 @@
         <artifactId>spring-orm</artifactId>
         <version>${spring.version}</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>${org.springframework.data-jpa}</version>
+    </dependency>
+
 
     <dependency>
         <groupId>org.hibernate</groupId>
